# vibecode-project

./: .gitignore  .vibecode.yaml  LICENSE  README.md  launch.bat  pyproject.toml  run_local.py  unpack.py  verify_docs.py  verify_install.py
src/vibecode/: __init__.py  __main__.py  ai.py  auth_helper.py  cli.py  config.py  discovery.py  engine.py  mcp_server.py  mcp_server_gdrive_real.py  rag.py  registry.py  settings.py
src/vibecode/agents/: mcp_agent.py
src/vibecode/chat/: __init__.py  engine.py  gui.py  ingest.py  knowledge.py  mcp_host.py  memory.py  models.py  persistence.py
src/vibecode/config/: mcp_servers.json
src/vibecode/gui/: __init__.py  dialogs.py  main_window.py  utils.py  workers.py
src/vibecode/renderers/: __init__.py  human.py  llm.py  markdown.py  secrets.py
tests/: test_fix_autofile.py  test_fix_custom_config.py  test_rag_threshold.py
